[package]
name = "everhour"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/V1RE/everhour"
authors = ["Niels Mentink <niels@ment.ink>"]
categories = ["command-line-utilities"]
description = "Everhour CLI"
homepage = "https://github.com/V1RE/everhour"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.68"
humantime = "2.1.0" 
clap = "3.0.0-beta.4"
url = "2.2.2" 

[dev-dependencies]
httpmock = "0.6"

[[bin]]
name = "everhour"
path = "src/main.rs"
